vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__labeled_selected_signal_force_assignment.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"\\\nlbl: with x select\n   foo <= force bar when others;\n        \")"
---
SelectedForceAssignment
  Label
    Identifier 'lbl'
    Colon
  SelectedAssignmentPreamble
    Keyword(With)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'x'
    Keyword(Select)
  NameTarget
    Name
      NameDesignatorPrefix
        Identifier 'foo'
  LTE
  Keyword(Force)
  SelectedExpressions
    SelectedExpressionItem
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'bar'
      Keyword(When)
      Choices
        OthersChoice
          Keyword(Others)
  SemiColon
