vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__loop_missing_end.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
loop
  x := 1;

== tree ==
LoopStatement
  LoopStatementPreamble
    Keyword(Loop)
  SequenceOfStatements
    SimpleVariableAssignment
      NameTarget
        Name
          NameDesignatorPrefix
            Identifier 'x'
      ColonEq
      LiteralExpression
        AbstractLiteral '1'
      SemiColon

== diagnostics ==
2:10 expected LoopStatementEpilogue
