vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__loop_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::loop_statement,\n\"\\\nlbl: loop\n  stmt1;\n  stmt2;\nend loop lbl;\")"
---
LoopStatement
  LoopStatementPreamble
    StmtLabel
      Identifier 'lbl'
      Colon
    Keyword(Loop)
  SequentialStatements
    ProcedureCallStatement
      Name
        NameDesignatorPrefix
          Identifier 'stmt1'
      SemiColon
    ProcedureCallStatement
      Name
        NameDesignatorPrefix
          Identifier 'stmt2'
      SemiColon
  LoopStatementEpilogue
    Keyword(End)
    Keyword(Loop)
    Identifier 'lbl'
    SemiColon
