vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__matching_case_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::case_statement,\n\"\\\ncase? foo(1) is\n  when others => null;\nend case?;\")"
---
CaseStatement
  CaseStatementPreamble
    Keyword(Case)
    Que
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'foo'
        ParenthesizedName
          LeftPar
          AssociationList
            AssociationElement
              ActualPart
                ActualPartExpression
                  LiteralExpression
                    AbstractLiteral '1'
          RightPar
    Keyword(Is)
  CaseStatementAlternative
    CaseStatementAlternativePreamble
      Keyword(When)
      Choices
        OthersChoice
          Keyword(Others)
      RightArrow
    SequenceOfStatements
      NullStatement
        Keyword(Null)
        SemiColon
  CaseStatementEpilogue
    Keyword(End)
    Keyword(Case)
    Que
    SemiColon
