vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__next_statement_condition.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::next_statement, \"next when condition;\")"
---
NextStatement
  Keyword(Next)
  WhenClause
    Keyword(When)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'condition'
  SemiColon
