vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__next_statement_loop_label_condition.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::next_statement, \"next foo when condition;\")"
---
NextStatement
  Keyword(Next)
  Identifier 'foo'
  WhenClause
    Keyword(When)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'condition'
  SemiColon
